<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>

        <item
            android:id="@+id/stats"
            android:title="@string/stats"
            android:icon="@drawable/ic_trending_up_black_24dp"/>

        <item
            android:id="@+id/setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings_black_24dp"/>

        <item
            android:id="@+id/sync"
            android:title="@string/sync"
            android:icon="@drawable/ic_sync_black_24dp"/>

        <item
            android:id="@+id/share"
            android:title="@string/share"
            android:icon="@drawable/ic_share_black_24dp"/>

        <item
            android:id="@+id/contact"
            android:title="@string/report"
            android:icon="@drawable/ic_bug_report_black_24dp"/>

        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/ic_about_us"/>
    </group>

</menu>