<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes_show">

    <include layout="@layout/toolbar"/>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/float_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:elevation="5dp"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_content_add_circle"
            app:backgroundTint="@color/colorPrimary"
            app:borderWidth="0dp"
            tools:ignore="RtlHardcoded"
            android:focusable="true"  />


        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:gravity="center"
                android:hint="@string/title"
                android:textSize="22sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="15"
                        android:textSize="22sp"
                        android:id="@+id/body"
                        android:gravity="top|left"
                        android:hint="@string/body"
                        android:fadeScrollbars="true"
                        android:scrollbars="vertical"
                        tools:ignore="RtlHardcoded" />

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="400dp"
                        android:layout_height="400dp"
                        android:src="@drawable/noimage"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>